Wed Dec 23 13:18:14 CET 1998  Werner Koch  <wk@isil.d.shuttle.de>

	* README: Replaced the command overview with a short intro.

Sat Dec 12 18:40:32 CET 1998  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in: Add check for dlopen in libc (Greg Troxel)
	and a new define
	* acconfig.h (DLSYM_NEEDS_UNDERSCORE): New.

Thu Dec 10 20:15:36 CET 1998  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m (GNUPG_CHECK_PIC): New
	* configure.in, acinclude.m4: Renamed all WK_ to GNUPG_

Tue Dec  8 15:09:29 CET 1998  Werner Koch  <wk@isil.d.shuttle.de>

    * VERSION: Set to 0.4.5
Wed Nov 25 12:38:29 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (USE_RNDLINUX): New.

Fri Nov 20 19:34:57 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* VERSION: Released 0.4.4

	* configure.in (try_asm_modules): For option --disable-asm

Tue Nov 10 19:32:40 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (MPI_SFLAGS): New.

Tue Nov 10 13:44:53 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* ABOUT-NLS: New
	* configure.in (AC_REVISION): New.

Sun Nov  8 18:20:35 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* VERSION: Set to 0.4.3

Sun Oct 25 19:49:37 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* Makefile.am (g10defs.h): New macro GNUPG_DATADIR.

Wed Oct 21 17:24:24 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in: Removed gettext kludge
	* acinclude.m4: Add patched AM_WITH_NKS macro

Tue Oct 20 19:03:36 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in: Kludge to make AM_GNU_GETTEXT work,
	changed some macors to more modern versions. Also
	changeg the all makefiles to remove duplicate ../intl.
	* acinclude.m4: Removed the gettext stuff, as this
	already comes with automake now.

Wed Oct 14 12:11:34 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (NAME_OF_DEV_RANDOM): New.
	(DYNLINK_MOD_CFLAGS): New.

Thu Oct  8 10:55:15 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* Makefile.am (g10defs.h): creates include file
	* acconfig.h: now includes g10defs.h