@@ -48,6 +48,7 @@ Lars Kellogg-Stedman	lars@bu.edu
 Marco d'Itri            md@linux.it
 Mark Adler		madler@alumni.caltech.edu
 Markus Friedl		Markus.Friedl@informatik.uni-erlangen.de
+Martin Kahlert		martin.kahlert@provi.de
 Martin Schulte		schulte@thp.uni-koeln.de
 Matthew Skala		mskala@ansuz.sooke.bc.ca
 Max Valianskiy		maxcom@maxcom.ml.org
